used flex wrap property to fix overflow of long words in tweet messages

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -32,6 +32,7 @@
 .message {
   width: 80%;
   margin: 0 5%;
+  overflow-wrap: break-word;
 }
 
 .tweet-footer {
